fix: text alignment in mission

--- a/website-challenge-2-sunnyside-landing/app/scss/sections/_about.scss
+++ b/website-challenge-2-sunnyside-landing/app/scss/sections/_about.scss
@@ -116,17 +116,17 @@
 		}
 	}
 	> p {
-		text-align: center;
-		padding: 0 10vw;
+		padding: 0 11vw;
 		margin-bottom: 2.67vw;
+		text-align: center;
 		
 		@include m.breakpoint-up("pc") {
-			padding: 0 9rem;
+			padding: 0 10rem;
 			margin-bottom: 2.4rem;
 		}
 		@include m.breakpoint-down("mission-text") {
 			font-size: 1.64vw;
-			padding: 0 5vw;
+			padding: 0 6vw;
 		}
 		@include m.breakpoint-down("about") {
 			font-size: inherit;
